# ffmpegpp

./: CMakeLists.txt  README.md
include/: ffmpeg++.h
src/: main.cpp
